# fft_pipeline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTE.md  LICENCE  LICENSE  PROGRESS.md  README.md  Readme.md  SUPPRESSION.md  benchmark.sh  extract_formulas.py  extract_vba.py  inpatient_fft.py  pyproject.toml  pytest.ini  setup_structure.py
data/inputs/collections_overview/: .gitkeep
data/inputs/raw/: .gitkeep
data/inputs/rolling_totals/: .gitkeep
data/inputs/templates/: FFT_AE_template.xlsm  FFT_Amb_template.xlsm  FFT_IP_template.xlsm  FFT_Mat_template.xlsm  FFT_OP_template.xlsm
data/outputs/: .gitkeep
docs/: CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  FFT_DATA_REFERENCE.md  GROUND_TRUTH_CHANGES.md  OPEN_CODE_CHECKLIST.md  PIPELINE.md
inputs/template _files/: FFT-inpatient-data-template.xlsm
rolling_total_file/: Monthly Rolling Totals.xlsx
src/: __main__.py  app.py  etl_functions.py
src/etl/: __init__.py  functions.py
src/fft/: __init__.py  __main__.py  config.py  loaders.py  processors.py  suppression.py  utils.py  validation.py  writers.py
src/fft/app/: __init__.py  __main__.py  server.py
src/fft_pipeline/: __init__.py  __main__.py  discovery.py  pipeline.py  rolling_totals.py
src/scripts/: __init__.py  check_sheet_structure.py  compare_with_ground_truth.py  fix_rolling_totals.py  process_month.py  update_all_months.sh  validate_fft_output.py
tests/: test_etl_functions.py  test_etl_minimal.py  test_property_based.py
tests/test_data/: sample.xlsx
